--- a/xdcs-frontend/package.json
+++ b/xdcs-frontend/package.json
@@ -32,6 +32,7 @@
     "@primer/octicons": "^9.1.1",
     "angular-split": "^3.0.2",
     "angular-tree-component": "~8.5.1",
+    "ansi-to-html": "^0.6.13",
     "bootstrap": "~4.3.1",
     "core-js": "^3.4.2",
     "ng2-ace-editor": "~0.3.9",
