--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -38,6 +38,14 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
+  xdcs-db-admin:
+    image: dpage/pgadmin4
+    ports:
+      - "34775:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@example.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
+
 volumes:
   postgres-data:
   xdcs-data:
