PPXDCS-177 Add possibility to upload artifacts by agents to the server

--- a/api/rest/api.yaml
+++ b/api/rest/api.yaml
@@ -729,6 +729,10 @@ components:
             - cuda
             - docker
             - script
+        artifacts:
+          type: array
+          items:
+            type: string
 
         # Docker
         dockerfile:
