PPXDCS-128 Add an option to disable allocating pseudo-tty for docker containers

--- a/api/rest/api.yaml
+++ b/api/rest/api.yaml
@@ -594,6 +594,8 @@ components:
         # Docker
         dockerfile:
           type: string
+        allocatePseudoTty:
+          type: boolean
 
         # Script
         scriptfile:
