PPXDCS-172 Store information in XDCS_LOG_ from which agent it has been received
Add info storage

--- a/api/rest/api.yaml
+++ b/api/rest/api.yaml
@@ -891,6 +891,8 @@ components:
         contents:
           type: string
           format: byte
+        nodeId:
+          type: string
       required:
         - time
         - type
