--- a/xdcs-frontend/package.json
+++ b/xdcs-frontend/package.json
@@ -36,6 +36,7 @@
     "ansi-to-html": "^0.6.13",
     "bootstrap": "~4.3.1",
     "core-js": "^3.4.2",
+    "ng-multiselect-dropdown": "^0.2.10",
     "ng2-ace-editor": "~0.3.9",
     "ngx-bootstrap": "^5.1.1",
     "ngx-clipboard": "^12.2.1",
