--- a/api/rest/api.yaml
+++ b/api/rest/api.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 
 info:
   title: XDCS REST API
-  version: 0.1.0-SNAPSHOT
+  version: 0.1.0
 
 servers:
   - url: http://127.0.0.1:32080/xdcs/rest
