--- a/xdcs-server/pom.xml
+++ b/xdcs-server/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>pl.edu.agh.xdcs</groupId>
         <artifactId>xdcs</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
 
     <properties>
