--- a/xdcs-agent/xdcs-agent.toml
+++ b/xdcs-agent/xdcs-agent.toml
@@ -8,6 +8,7 @@ send_path_executables = true
 host = "127.0.0.1"
 port.grpc = 32081
 port.ssh = 32082
+allow_unknown_hosts = false
 
 [server.auth]
 name = "agent-1"
