--- a/api/rest/api.yaml
+++ b/api/rest/api.yaml
@@ -139,8 +139,12 @@ paths:
             schema:
               $ref: '#/components/schemas/TaskDefinitionDto'
       responses:
-        204:
+        200:
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TaskDefinitionDto'
 
   /task-definitions/{taskDefinitionId}/workspace:
     get:
@@ -188,6 +192,10 @@ paths:
       responses:
         200:
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FileDto'
 
     delete:
       tags:
