--- a/api/rest/api.yaml
+++ b/api/rest/api.yaml
@@ -490,6 +490,25 @@ paths:
               schema:
                 $ref: '#/components/schemas/TaskDto'
 
+  /tasks/{taskId}/merging:
+    get:
+      tags:
+        - Tasks
+      operationId: getMergingTaskForTask
+      parameters:
+        - in: path
+          name: taskId
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TaskDto'
+
   /tasks/{taskId}/conditions:
     get:
       tags:
@@ -854,6 +873,8 @@ components:
           type: array
           items:
             type: string
+        mergingScript:
+          type: string
 
         # Docker
         dockerfile:
@@ -929,6 +950,8 @@ components:
         timeCreated:
           type: string
           format: 'date-time'
+        originTaskId:
+          type: string
         state:
           $ref: '#/components/schemas/TaskState'
         links:
@@ -954,6 +977,8 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ResourceDto'
+        mergingAgent:
+          type: string
         kernelArguments:
           description: List containing kernelArgument values
           type: array
